Ignore a backup of the can can ability model file.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ public/flip_books
 .rvmrc.12.13.2013-13:27:39
 lib/tasks/season-list-sample.txt
 lib/tasks/seating-cats-for-1680-81-1685-86.txt
+ability-backup.rb
