Fix faceted browser links to point to register_images instead of flipbooks; add register season link to lightbox.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ _archive/
 Gemfile.old.lock
 db/backups/
 public/system/
+11s/
+s3listing.txt
+app/views/layouts/website-wrapper.html.erb
 
 # Ignore application configuration
 /config/application.yml
