Update image migration tasks for R134-R158

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ app/views/layouts/website-wrapper.html.erb
 
 # Ignore application configuration
 /config/application.yml
+missing-images.txt
+missing-images/**
