--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ app/views/layouts/website-wrapper.html.erb
 /config/application.yml
 missing-images.txt
 missing-images/**
+missing-images-list.txt
