--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: cfrp_development
+  database: cfrp-staging
   pool: 5
   # username: cfrp
   # password: cfrp$02139
