--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "CFRP",
-  "description": "",
+  "description": "Comédie Française Registers Project",
   "repository": "https://github.com/mit-history/cfrp",
   "scripts": {
     "postdeploy": "pg_dump $STAGING_DATABASE_URL | psql $DATABASE_URL && bundle exec rake db:migrate"
