Cleanup, review app issues.
Specify a plan for postgres add-on in app.json

Fix nit in app.json

Touch for PR app

--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: cfrp-staging
+  database: cfrp-production-05-10-17
   pool: 5
   # username: cfrp
   # password: cfrp$02139
