--- a/app.json
+++ b/app.json
@@ -28,7 +28,9 @@
   },
   "addons": [
     "sendgrid:starter",
-    "heroku-postgresql:standard-0",
+    {
+      "plan": "heroku-postgresql:standard-0"
+    },
     "librato:development",
     "memcachier:250",
     "newrelic:wayne",
