Created a repeatable process for importing Lagrange data
Including:

- Inserts and table definitions
- Models, migrations
- Rake tasks and importer classes

Add models, migrations for Lagrange data.

Fix some associations; correct some insert statements.

Add rake tasks and importer classes for all Lagrange data.

Fix issues in RCF to Lagrange Author join data import

Create migrations to move lagrange id relations to standard rails primary keys.

Make lagrange models and relations more standard

Updated schema to go with lagrange relational migrations and updated models

Rename lagrange rake file. Added tasks to move id values to new columns.

Clean up admin UI.

Clean up active admin some more.

--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: cfrp-production-05-10-17
+  database: cfrp-staging-05-23-2017
   pool: 5
   # username: cfrp
   # password: cfrp$02139
