--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: cfrp-staging-05-23-2017
+  database: cfrp_production-06-13-2017
   pool: 5
   # username: cfrp
   # password: cfrp$02139
